fixed spacing

--- a/public/css/mainExpd2.css
+++ b/public/css/mainExpd2.css
@@ -72,6 +72,7 @@ svg {
 
 
 #catagoryButtonContainer{
+  top: 520px;
   display:inline;
   position: absolute;
   left:700px;
